# python-redis-pub-sub

./: .gitignore  README.md  docker-compose.yaml
publisher/: Dockerfile  app.py  pyproject.toml
subscriber/: Dockerfile  app.py  pyproject.toml  requirements.txt
